sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value getNombrevaleurs
  val taille=getNombrevaleurs()
             ^AlgCombSort:8: error: not found: value escart
    if (escart>1) {
        ^